[package]
authors = ["aljun <gagasalamer@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
name = "horajs"
readme = "README.md"
version = "0.1.2"

description = "Hora Search Everywhere"
homepage = "https://horasearch.com"
repository = "https://github.com/hora-search/hora-wasm"

categories = ["algorithms", "data-structures", "wasm"]
keywords = ["intelligence", "neighbor", "SIMD", "search", "distance"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["wee_alloc"]

[dependencies]
cfg-if = "1.0.0"
getrandom = {version = "0.2.3", features = ["js"]}
rayon = "1.5.1"
real_hora = {package = "hora", version = "0.1.0"}
wasm-bindgen = "0.2.75"
wasm-bindgen-futures = "0.4.25"
wasm-bindgen-rayon = { version = "1.0.3", features = ["no-bundler"] }
wee_alloc = {version = "0.4.5", optional = true}
console_error_panic_hook = "0.1.6"

[dev-dependencies]
futures = "0.3.16"
js-sys = "0.3.52"
wasm-bindgen-test = "0.3.25"
